Fixed responsive issue where navigation buttons were too big on small screens.

--- a/styles/base.css
+++ b/styles/base.css
@@ -55,7 +55,7 @@ body {
   color: inherit;
   border: 1px solid var(--outline-color);
   border-radius: 2rem;
-  padding: 5px 10px;
+  padding: 0.5rem;
   margin: auto 1rem;
   width: 90px;
   transition: 300ms ease-in-out;
@@ -69,7 +69,7 @@ body {
   color: #ffccb0;
   border: 1px solid #ffccb0;
   border-radius: 2rem;
-  padding: 5px 10px;
+  padding: 0.5rem;
   margin: auto 1rem;
   width: 90px;
   box-shadow: 0px 0px 5px #ffccb0;
